Sources/OpenDDSharp/OpenDDS/DCPS/TcpInst.cs


    [SuppressUnmanagedCodeSecurity]
    [LibraryImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_GetRcvBufferSize")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial int TcpInstGetRcvBufferSize(IntPtr ti);

    [SuppressUnmanagedCodeSecurity]
    [LibraryImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_SetRcvBufferSize")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial void TcpInstSetRcvBufferSize(IntPtr ti, int value);

    [SuppressUnmanagedCodeSecurity]
    [LibraryImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_GetEnableNagleAlgorithm")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    [return: MarshalAs(UnmanagedType.I1)]
    public static partial bool GetEnableNagleAlgorithm(IntPtr ti);

    [SuppressUnmanagedCodeSecurity]
    [LibraryImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_SetEnableNagleAlgorithm")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial void SetEnableNagleAlgorithm(IntPtr ti, [MarshalAs(UnmanagedType.I1)] bool value);

    [SuppressUnmanagedCodeSecurity]
    [LibraryImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_GetConnRetryInitialDelay")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial int GetConnRetryInitialDelay(IntPtr ti);

    [SuppressUnmanagedCodeSecurity]
    [LibraryImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_SetConnRetryInitialDelay")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial void SetConnRetryInitialDelay(IntPtr ti, int value);

    [SuppressUnmanagedCodeSecurity]
    [LibraryImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_GetConnRetryBackoffMultiplier")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial double GetConnRetryBackoffMultiplier(IntPtr ti);

    [SuppressUnmanagedCodeSecurity]
    [LibraryImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_SetConnRetryBackoffMultiplier")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial void SetConnRetryBackoffMultiplier(IntPtr ti, double value);

    [SuppressUnmanagedCodeSecurity]
    [LibraryImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_GetConnRetryAttempts")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial int GetConnRetryAttempts(IntPtr ti);

    [SuppressUnmanagedCodeSecurity]
    [LibraryImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_SetConnRetryAttempts")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial void SetConnRetryAttempts(IntPtr ti, int value);

    [SuppressUnmanagedCodeSecurity]
    [LibraryImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_GetMaxOutputPausePeriod")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial int GetMaxOutputPausePeriod(IntPtr ti);

    [SuppressUnmanagedCodeSecurity]
    [LibraryImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_SetMaxOutputPausePeriod")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial void SetMaxOutputPausePeriod(IntPtr ti, int value);

    [SuppressUnmanagedCodeSecurity]
    [LibraryImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_GetPassiveReconnectDuration")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial int GetPassiveReconnectDuration(IntPtr ti);

    [SuppressUnmanagedCodeSecurity]
    [LibraryImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_SetPassiveReconnectDuration")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial void SetPassiveReconnectDuration(IntPtr ti, int value);

    [SuppressUnmanagedCodeSecurity]
    [LibraryImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_GetActiveConnTimeoutPeriod")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial int GetActiveConnTimeoutPeriod(IntPtr ti);

    [SuppressUnmanagedCodeSecurity]
    [LibraryImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_SetActiveConnTimeoutPeriod")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial void SetActiveConnTimeoutPeriod(IntPtr ti, int value);

    [SuppressUnmanagedCodeSecurity]
    [LibraryImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_GetPublicAddress")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial IntPtr GetPublicAddress(IntPtr ird);

    [SuppressUnmanagedCodeSecurity]
    [LibraryImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_SetPublicAddress", StringMarshalling = StringMarshalling.Utf8)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial void SetPublicAddress(IntPtr ird, string ip);

    [SuppressUnmanagedCodeSecurity]
    [LibraryImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_GetLocalAddress")]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial IntPtr TcpInstGetLocalAddress(IntPtr ird);

    [SuppressUnmanagedCodeSecurity]
    [LibraryImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_SetLocalAddress", StringMarshalling = StringMarshalling.Utf8)]
    [UnmanagedCallConv(CallConvs = new[] { typeof(CallConvCdecl) })]
    public static partial void TcpInstSetLocalAddress(IntPtr ird, string ip);
#else
    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_new", CallingConvention = CallingConvention.Cdecl)]
    public static extern IntPtr TcpInstNew(IntPtr inst);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_GetIsReliable", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool TcpInstGetIsReliable(IntPtr ti);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_GetSendBufferSize", CallingConvention = CallingConvention.Cdecl)]
    public static extern int TcpInstGetSendBufferSize(IntPtr ti);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_SetSendBufferSize", CallingConvention = CallingConvention.Cdecl)]
    public static extern void TcpInstSetSendBufferSize(IntPtr ti, int value);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_GetRcvBufferSize", CallingConvention = CallingConvention.Cdecl)]
    public static extern int TcpInstGetRcvBufferSize(IntPtr ti);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_SetRcvBufferSize", CallingConvention = CallingConvention.Cdecl)]
    public static extern void TcpInstSetRcvBufferSize(IntPtr ti, int value);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_GetEnableNagleAlgorithm", CallingConvention = CallingConvention.Cdecl)]
    [return: MarshalAs(UnmanagedType.I1)]
    public static extern bool GetEnableNagleAlgorithm(IntPtr ti);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_SetEnableNagleAlgorithm", CallingConvention = CallingConvention.Cdecl)]
    public static extern void SetEnableNagleAlgorithm(IntPtr ti, [MarshalAs(UnmanagedType.I1)] bool value);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_GetConnRetryInitialDelay", CallingConvention = CallingConvention.Cdecl)]
    public static extern int GetConnRetryInitialDelay(IntPtr ti);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_SetConnRetryInitialDelay", CallingConvention = CallingConvention.Cdecl)]
    public static extern void SetConnRetryInitialDelay(IntPtr ti, int value);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_GetConnRetryBackoffMultiplier", CallingConvention = CallingConvention.Cdecl)]
    public static extern double GetConnRetryBackoffMultiplier(IntPtr ti);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_SetConnRetryBackoffMultiplier", CallingConvention = CallingConvention.Cdecl)]
    public static extern void SetConnRetryBackoffMultiplier(IntPtr ti, double value);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_GetConnRetryAttempts", CallingConvention = CallingConvention.Cdecl)]
    public static extern int GetConnRetryAttempts(IntPtr ti);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_SetConnRetryAttempts", CallingConvention = CallingConvention.Cdecl)]
    public static extern void SetConnRetryAttempts(IntPtr ti, int value);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_GetMaxOutputPausePeriod", CallingConvention = CallingConvention.Cdecl)]
    public static extern int GetMaxOutputPausePeriod(IntPtr ti);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_SetMaxOutputPausePeriod", CallingConvention = CallingConvention.Cdecl)]
    public static extern void SetMaxOutputPausePeriod(IntPtr ti, int value);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_GetPassiveReconnectDuration", CallingConvention = CallingConvention.Cdecl)]
    public static extern int GetPassiveReconnectDuration(IntPtr ti);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_SetPassiveReconnectDuration", CallingConvention = CallingConvention.Cdecl)]
    public static extern void SetPassiveReconnectDuration(IntPtr ti, int value);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_GetActiveConnTimeoutPeriod", CallingConvention = CallingConvention.Cdecl)]
    public static extern int GetActiveConnTimeoutPeriod(IntPtr ti);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_SetActiveConnTimeoutPeriod", CallingConvention = CallingConvention.Cdecl)]
    public static extern void SetActiveConnTimeoutPeriod(IntPtr ti, int value);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_GetPublicAddress", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
    public static extern IntPtr GetPublicAddress(IntPtr ird);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_SetPublicAddress", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
    public static extern void SetPublicAddress(IntPtr ird, string ip);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_GetLocalAddress", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
    public static extern IntPtr TcpInstGetLocalAddress(IntPtr ird);

    [SuppressUnmanagedCodeSecurity]
    [DllImport(MarshalHelper.API_DLL, EntryPoint = "TcpInst_SetLocalAddress", CallingConvention = CallingConvention.Cdecl, CharSet = CharSet.Ansi, BestFitMapping = false, ThrowOnUnmappableChar = true)]
    public static extern void TcpInstSetLocalAddress(IntPtr ird, string ip);
#endif
}